--- a/src/main/resources/templates/AddGameDetails.html
+++ b/src/main/resources/templates/AddGameDetails.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
+<!--
+Page 2 of the game-adding form
+Last updated 10/9/2022
+Author(s): Jessica Frank
+-->
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head> 
-        <title>GAFF - Add Game</title> 
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <title>GAFF</title> 
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-teal.min.css" />
         <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </head>
@@ -13,7 +19,7 @@
         <div id="body-div">
             <h2 style="text-align:center;">Add New Game</h2>
             <div style="text-align:center;">RAWG Results for: GAME NAME</div>
-            <form style="display: flex; flex-direction: column">
+            <form style="display: flex; flex-direction: column" action = "/add_game/submit" method="POST">
                 <div style="display: flex; flex-direction: row">
                     <div style="margin:2.5%; display: flex; flex-direction: column; width:30%; border:2px solid green;">
                         <h6 style="text-align: center">Details</h6>
