--- a/src/main/resources/templates/ViewSystemLogs.html
+++ b/src/main/resources/templates/ViewSystemLogs.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+The site's home page
+Last updated 10/9/2022
+Author(s): Alex Wesley
+-->
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
