Changed site header for newly added logout ability

--- a/src/main/resources/templates/Fragments.html
+++ b/src/main/resources/templates/Fragments.html
@@ -17,7 +17,7 @@ Author(s): Jessica Frank
                 <a class="mdl-navigation__link" href="/">Home</a>
                 <!-- Spacer spreads title and link to opposite sides -->
                 <div class="mdl-layout-spacer"></div>
-                <a class="mdl-navigation__link" href="#">Log Out (To be added)</a>
+                <a class="mdl-navigation__link" href="/logout">Log Out</a>
             </div>
         </header>
 
