Adjusted the Admin System Logs

--- a/src/main/resources/templates/ViewSystemLogs.html
+++ b/src/main/resources/templates/ViewSystemLogs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 The site's home page
-Last updated 10/9/2022
+Last updated 10/17/2022
 Author(s): Alex Wesley
 -->
 <html lang="en"
@@ -32,29 +32,29 @@ Author(s): Alex Wesley
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="mdl-data-table__cell--non-numeric">Alex did amazing and finished his pages!</td>
-                        <td>Admin</td>
-                        <td>Just Now</td>
-                    </tr>
-                    <tr>
-                        <td class="mdl-data-table__cell--non-numeric">Not quite sure when Alec will start!</td>
+                        <td class="mdl-data-table__cell--non-numeric">Alec connected to play Call of Duty.</td>
                         <td>Player</td>
-                        <td>Unknown System Error</td>
+                        <td>Yesterday @4:25pm</td>
                     </tr>
                     <tr>
-                        <td class="mdl-data-table__cell--non-numeric">Jessica is amazing!</td>
+                        <td class="mdl-data-table__cell--non-numeric">Jessica added Call of Duty as an action game.</td>
                         <td>Moderator</td>
-                        <td>Always</td>
+                        <td>Yesterday @11:12am</td>
                     </tr>
                     <tr>
-                        <td class="mdl-data-table__cell--non-numeric">Alex is working hard!</td>
+                        <td class="mdl-data-table__cell--non-numeric">Alex connected to play Madden 23</td>
                         <td>Admin</td>
-                        <td>Since Today @ 7:30pm</td>
+                        <td>Sunday @5:55pm</td>
                     </tr>
                     <tr>
-                        <td class="mdl-data-table__cell--non-numeric">Alec hasn't started yet!</td>
-                        <td>Player</td>
-                        <td>Since August</td>
+                        <td class="mdl-data-table__cell--non-numeric">Jessica added Madden 23 as a sports game</td>
+                        <td>Moderator</td>
+                        <td>Saturday @3:15pm</td>
+                    </tr>
+                    <tr>
+                        <td class="mdl-data-table__cell--non-numeric">Jessica was promoted to a Moderator by Alex</td>
+                        <td>Admin</td>
+                        <td>Saturday @11:27am</td>
                     </tr>
                 </tbody>
             </table>
