adjusted the admin pages again

--- a/src/main/resources/templates/PromoteDemoteMod.html
+++ b/src/main/resources/templates/PromoteDemoteMod.html
@@ -16,19 +16,30 @@ Author(s): Alex Wesley
     <body style="display:grid; grid-template-rows: auto 1fr auto; min-height:100vh;">
         <div th:insert="Fragments :: header">...</div>
         <div id="body-div">
-            <h2 style="text-align:center;">Promotion and Demotion of Admins</h2>
-            <h6 style="text-align:center; margin-top: 100px">Enter the name of the Moderator you want to Promote or Demote</h6>
+            <h2 style="text-align:center;">Promotion and Demotion</h2>
+            <h6 style="text-align:center; margin-top: 100px">Enter the name of the user you want to Promote or Demote</h6>
             <form style="display: flex; flex-direction: column">
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" style= "margin:0px auto; display: block">
                     <input class="mdl-textfield__input" type="text" id="name-input"/>
-                    <label class="mdl-textfield__label" for="name-input">Enter Moderator Name</label>
+                    <label class="mdl-textfield__label" for="name-input">Enter user's Name</label>
                 </div>
                 <div style= "margin:0px auto; display: block">
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" style="margin:0px auto; display: inline; margin-right: 10px;">
-                    Promote
-                </button>
+                    <ul>
+                            <li class="mdl-list__item"><span class="mdl-list__item-secondary-action">
+                                    <label class="demo-list-radio mdl-radio mdl-js-radio mdl-js-ripple-effect" for="user-type-1">
+                                        <input type="radio" id="user-type-1" class="mdl-radio__button" name="userType" value="Player"/>
+                                        Player
+                                    </label>                                
+                                </span></li>
+                            <li class="mdl-list__item"><span class="mdl-list__item-secondary-action">
+                                    <label class="demo-list-radio mdl-radio mdl-js-radio mdl-js-ripple-effect" for="user-type-2">
+                                        <input type="radio" id="user-type-2" class="mdl-radio__button" name="userType" value="Moderator"/>
+                                        Moderator
+                                    </label>                                
+                                </span></li>
+                        </ul>
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" style="margin:0px auto; display: inline; margin-left: 10px;">
-                    Demote 
+                    Submit 
                 </button>
                 </div>
             </form>
