--- a/src/main/resources/templates/MainPage.html
+++ b/src/main/resources/templates/MainPage.html
@@ -13,47 +13,68 @@ Author(s): Jessica Frank
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-teal.min.css" />
         <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+        <style>
+            a {
+                text-transform: unset !important;
+            }
+            .demo-card-wide {
+                margin: 20px auto;
+                width: 80%;
+            }
+            .mdl-button {
+                display: block;
+                margin-bottom: 0.5%;
+            }
+        </style>
     </head>
     <body style="display:grid; grid-template-rows: auto 1fr auto; min-height:100vh;">
         <div th:insert="Fragments :: header">...</div>
         <div id="body-div">
             <h1 style="text-align:center;">GAFF</h1>
             <h4 style="text-align:center;">A Gaming App for Finding Friends</h4>
-            <div th:if="${hasPlayerRole}">
-                Player Section <br/>
-                <ul>
-                    <li>
-                        <a href="/game_list">Game List</a>
-                    </li>
-                    <li>
-                        <a href="/game_details">Individual Game Details</a>
-                    </li>
-                    <li>
-                        <a href="/player_profile">Player Profile</a>
-                    </li>
-                </ul>
-            </div>
-            <div th:if="${hasModRole}">
-                Moderator Section <br/>
-                <ul>
-                    <li>
-                        <a href="/add_game/search">Add new game</a>
-                    </li>
-                    <li>
-                        <a href="/edit_game">Edit game</a>
-                    </li>
-                </ul>
-            </div>
-            <div th:if="${hasAdminRole}">
-                Admin Section 
-                <ul>
-                    <li>
-                        <a href="/change_role">Edit user roles</a> 
-                    </li>
-                    <li>
-                        <a href="/view_logs">View system logs</a>
-                    </li>
-                </ul>
+            <div style="margin-bottom: 50px">
+                <div class="demo-card-wide mdl-shadow--2dp" th:if="${hasPlayerRole}">
+                    <div class="mdl-card__title">
+                        <span class="mdl-card__title-text">Player Actions</span>
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/game_list">
+                            Game List
+                        </a>
+                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/game_details">
+                            Individual Game Details (Temporary Link)
+                        </a>
+                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/player_profile">
+                            View My Profile
+                        </a>
+                    </div>
+                </div>
+                <div class="demo-card-wide mdl-shadow--2dp" th:if="${hasModRole}">
+                    <div class="mdl-card__title">
+                        <span class="mdl-card__title-text">Moderator Actions</span>
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/add_game/search">
+                            Add new game
+                        </a>
+                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/edit_game">
+                            Edit game (Temporary Link)
+                        </a>
+                    </div>
+                </div>
+                <div class="demo-card-wide mdl-shadow--2dp" th:if="${hasAdminRole}">
+                    <div class="mdl-card__title">
+                        <span class="mdl-card__title-text">Admin Actions</span>
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/change_role">
+                            Edit user roles</a> 
+
+                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/view_logs">
+                            View system logs
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div th:insert="Fragments :: footer">...</div>
