--- a/src/main/resources/templates/Profile.html
+++ b/src/main/resources/templates/Profile.html
@@ -17,70 +17,36 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div th:insert="Fragments :: header">...</div>
         <div id="body-div">
             <h1 style="text-align:center;">Name</h1>
-            <button class="mdl-button mdl-js-button mdl-button--raised" style="display:block; margin:0px auto; display: inline-block;">
-                Steam
-            </button>
-            <button class="mdl-button mdl-js-button mdl-button--raised" style="margin:0px auto; display: inline-block;">
-                Discord
-            </button>
-            <button class="mdl-button mdl-js-button mdl-button--raised" style="margin:0px auto; display: inline-block;" >
-                Twitter
-            </button>
-            
-
-<div class="demo-card-square mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Game #1</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Cool game
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      View Game Details
-    </a>
-  </div>
-</div>
-            <div class="demo-card-square mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Game #2</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Cool game 2
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      View Game Details
-    </a>
-  </div>
-</div>
-            <div class="demo-card-square mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Game #3</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Cool game
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      View Game Details
-    </a>
-  </div>
-</div>
+            <h4>Bio: About You</h4>
+            <h4>
+                Links: Steam, Discord, Twitter, etc
+            </h4>
+            <div>       
+                <h2 class="mdl-card__title-text">Favorite Game</h2>
+            </div>
+             <div class="demo-card-square mdl-card mdl-shadow--2dp">
+                <div class="mdl-card__title mdl-card--expand">
+                    <h2 class="mdl-card__title-text">Rocket League</h2>
+                </div>
+                <div class="mdl-card__supporting-text">
+                    Description of Rocket League
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                    <a onclick="location.href = '/game_details';" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                        View Game Details
+                    </a>
+                </div>
+            </div>
         </div>
+       
         <div th:insert="Fragments :: footer">...</div>
     </body>
 </html>
- 
+
 
 <style>
     .demo-card-square {
-position: absolute;
-left: 50%;
-top: 50%;
-transform: translate(-50%, -50%);
-border: 5px solid #FFFF00;
-padding: 10px;
-}
+        margin: 10px;
+        padding: 10px;
+    }
 </style>
-    
