--- a/src/main/resources/templates/GameTemplate.html
+++ b/src/main/resources/templates/GameTemplate.html
@@ -16,29 +16,40 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body style="display:grid; grid-template-rows: auto 1fr auto; min-height:100vh;">
         <div th:insert="Fragments :: header">...</div>
         <div id="body-div">
-            <div class="demo-card-image mdl-card mdl-shadow--2dp">
-                <div class="mdl-card__title mdl-card--expand"></div>
-                <div class="mdl-card__actions">
-                    <span class="demo-card-image__filename">Image.jpg</span>
-                </div>
+            <h1 style="text-align:center;">Rocket League</h1>
+            <h4>Description:</h4>
+            <h4>Platforms: PC, Console, Mobile</h4>
+            <h4>Genre: Racing</h4>
+            <div th:if="${hasModRole}">
+            <a href="/edit_game">Edit game</a>
             </div>
-            <ul class="demo-list-item mdl-list">
+            <div style="margin-top:2.5%;margin-bottom:2.5%; display: inline-block; width:20%; border:2px solid green; ">
+                <h4> Player List</h4>
+            <ul class="demo-list-item mdl-list" >
                 <li class="mdl-list__item">
+                   
                     <span class="mdl-list__item-primary-content">
+                        <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
                         Bryan Cranston
+                        </a>
                     </span>
                 </li>
                 <li class="mdl-list__item">
                     <span class="mdl-list__item-primary-content">
+                        <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
                         Aaron Paul
+                        </a>
                     </span>
                 </li>
                 <li class="mdl-list__item">
                     <span class="mdl-list__item-primary-content">
+                        <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
                         Bob Odenkirk
+                        </a>
                     </span>
                 </li>
             </ul>
+            </div>
         </div>
         <div th:insert="Fragments :: footer">...</div>
     </body>
