Late changes to the main page

--- a/src/main/resources/templates/MainPage.html
+++ b/src/main/resources/templates/MainPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 The site's home page
-Last updated 10/15/2022
+Last updated 10/18/2022
 Author(s): Jessica Frank
 -->
 <html lang="en"
@@ -41,9 +41,9 @@ Author(s): Jessica Frank
                         <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/game_list">
                             Game List
                         </a>
-                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/game_details">
+<!--                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/game_details">
                             Individual Game Details (Temporary Link)
-                        </a>
+                        </a>-->
                         <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/player_profile">
                             View My Profile
                         </a>
@@ -57,9 +57,9 @@ Author(s): Jessica Frank
                         <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/add_game/search">
                             Add new game
                         </a>
-                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/edit_game">
+<!--                        <a class="mdl-button mdl-button--raised mdl-button--accent mdl-js-button" href="/edit_game">
                             Edit game (Temporary Link)
-                        </a>
+                        </a>-->
                     </div>
                 </div>
                 <div class="demo-card-wide mdl-shadow--2dp" th:if="${hasAdminRole}">
